[gd_scene load_steps=5 format=3 uid="uid://b23q7mrodeu1f"]

[ext_resource type="Script" path="res://Scripts/UI/main_menu.gd" id="1_j7hkm"]
[ext_resource type="Texture2D" uid="uid://bllbdhrtwj6u1" path="res://Assets/level1.png" id="2_kgy0h"]
[ext_resource type="LabelSettings" uid="uid://bdwyjfdqnkm2p" path="res://Assets/Fonts/new_label_settings.tres" id="3_hkmj4"]
[ext_resource type="FontFile" uid="uid://b630sr0wv8xrk" path="res://Assets/Fonts/DungeonChunk.ttf" id="4_1qjpm"]

[node name="MainMenu" type="Control"]
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j7hkm")

[node name="Panel" type="Panel" parent="."]
texture_filter = 1
layout_mode = 0
offset_right = 320.0
offset_bottom = 160.0

[node name="Sprite2D" type="Sprite2D" parent="Panel"]
position = Vector2(162, 80)
scale = Vector2(1.18571, 1.11111)
texture = ExtResource("2_kgy0h")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 8.0
offset_right = 256.0
offset_bottom = 152.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "DUNGEON MASTERS"
label_settings = ExtResource("3_hkmj4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_1qjpm")
theme_override_font_sizes/font_size = 12
text = "PLAY"

[node name="AjustesButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_1qjpm")
theme_override_font_sizes/font_size = 12
text = "AJUSTES"

[node name="CREDITS" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_1qjpm")
theme_override_font_sizes/font_size = 12
text = "CREDITS"

[node name="SalirButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_1qjpm")
theme_override_font_sizes/font_size = 12
text = "SALIR"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 144.0
offset_right = 32.0
offset_bottom = 162.0
theme_override_fonts/font = ExtResource("4_1qjpm")
theme_override_font_sizes/font_size = 10
text = "Debug"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/AjustesButton" to="." method="_on_ajustes_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CREDITS" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/SalirButton" to="." method="_on_salir_button_pressed"]
